--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^2.0.4",
     "@loopback/boot": "^1.2.8",
     "@loopback/context": "^1.16.0",
     "@loopback/core": "^1.7.1",
@@ -55,12 +56,16 @@
     "@loopback/rest": "^1.12.0",
     "@loopback/rest-explorer": "^1.1.23",
     "@loopback/service-proxy": "^1.1.11",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "loopback-connector-postgresql": "^3.6.1"
   },
   "devDependencies": {
     "@loopback/build": "^1.5.5",
     "@loopback/testlab": "^1.2.10",
     "@loopback/tslint-config": "^2.0.4",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.11.2",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3"
